objects/Lease_Schedule_Summary_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Map the lease schedules row to a specific field on the lease schedule summary.</description>
    <fields>
        <fullName>From_Field__c</fullName>
        <description>This is the API Name of the field that is on the Lease Schedule record.  It will most likely be Annual_Lease_Payment__c for all custom setting records.</description>
        <inlineHelpText>This is the API Name of the field that is on the Lease Schedule record.  It will most likely be Annual_Lease_Payment__c for all custom setting records, but it always helps to double-check.</inlineHelpText>
        <label>From Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Field__c</fullName>
        <description>The API Name of the field on the Lease Schedule Summary object that is the destination of the from field.</description>
        <inlineHelpText>The API Name of the field on the Lease Schedule Summary object that is the destination of the from field.</inlineHelpText>
        <label>To Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Number__c</fullName>
        <description>This is the nth year of the lease schedule.  For example, if there are 20 lease schedule records and we are working with the information for the 18th year, the number in this field should be &quot;18&quot;.</description>
        <inlineHelpText>This is the nth year of the lease schedule.  For example, if there are 20 lease schedule records and we are working with the information for the 18th year, the number in this field should be &quot;18&quot;.</inlineHelpText>
        <label>Year Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Lease Schedule Summary Mapping</label>
</CustomObject>